--- a/branches/hdf5_1_6/testpar/Makefile.in
+++ b/branches/hdf5_1_6/testpar/Makefile.in
@@ -29,7 +29,7 @@ RUNTEST=$(RUNPARALLEL)
 
 ## Test programs and scripts.
 ##
-TEST_PROGS_PARA=t_mpi t_fphdf5 testphdf5
+TEST_PROGS_PARA=t_mpi testphdf5
 TEST_SCRIPTS=testph5.sh
 
 ## These are our main targets
@@ -45,7 +45,7 @@ DISTCLEAN=go Makefile testph5.sh
 ## Test source files
 TEST_PHDF5_SRC=testphdf5.c t_dset.c t_file.c t_mdset.c t_ph5basic.c
 TEST_PHDF5_OBJ=$(TEST_PHDF5_SRC:.c=.lo)
-TEST_SRC=t_mpi.c t_fphdf5.c $(TEST_PHDF5_SRC)
+TEST_SRC=t_mpi.c $(TEST_PHDF5_SRC)
 TEST_OBJ=$(TEST_SRC:.c=.lo)
 TEST_HDR=testphdf5.h
 
@@ -53,9 +53,6 @@ TEST_HDR=testphdf5.h
 $(PROGS): $(LIBHDF5) $(LIBH5TEST)
 
 $(TEST_OBJ): $(TEST_HDR)
-
-t_fphdf5: t_fphdf5.lo
-	@$(LT_LINK_EXE) $(CFLAGS) -o $@ t_fphdf5.lo $(LIBH5TEST) $(LIBHDF5) $(LDFLAGS) $(LIBS)
 
 t_mpi: t_mpi.lo
 	@$(LT_LINK_EXE) $(CFLAGS) -o $@ t_mpi.lo $(LIBH5TEST) $(LIBHDF5) $(LDFLAGS) $(LIBS)
