Purpose: h5repack in 1.6
Description:

2 functions we re added to /src:
H5Premove filter and H5Iget_file_id



Solution:

Platforms tested:
linux
solaris
AIX

Misc. update:

--- a/branches/hdf5_1_6/configure.in
+++ b/branches/hdf5_1_6/configure.in
@@ -2335,6 +2335,7 @@ AC_CONFIG_FILES([src/libhdf5.settings
                  tools/h5dump/Makefile
                  tools/h5import/Makefile
                  tools/h5diff/Makefile
+                 tools/h5repack/Makefile
                  tools/h5ls/Makefile
                  tools/lib/Makefile
                  tools/misc/Makefile
