--- a/branches/hdf5_1_6/tools/lib/Makefile.in
+++ b/branches/hdf5_1_6/tools/lib/Makefile.in
@@ -1,4 +1,3 @@
-## HDF5 Library Makefile(.in)
 ##
 ## Copyright by the Board of Trustees of the University of Illinois.
 ## All rights reserved.
@@ -11,7 +10,9 @@
 ## is linked from the top-level documents page.  It can also be found at
 ## http://hdf.ncsa.uiuc.edu/HDF5/doc/Copyright.html.  If you do not have
 ## access to either file, you may request a copy from hdfhelp@ncsa.uiuc.edu.
-## 
+##
+## HDF5 Library Makefile(.in)
+##
 top_srcdir=@top_srcdir@
 top_builddir=../..
 srcdir=@srcdir@
@@ -40,7 +41,7 @@ PROGS=$(PUB_PROGS) $(TEST_PROGS)
 
 ## Source and object files for the library; do not install
 ##
-LIB_SRC=h5tools.c h5tools_str.c h5tools_utils.c
+LIB_SRC=h5tools.c h5tools_str.c h5tools_utils.c h5diff.c h5diff_array.c h5diff_attr.c h5diff_dset.c h5diff_util.c h5trav.c h5trav_table.c h5tools_filters.c
 LIB_OBJ=$(LIB_SRC:.c=.lo)
 PUB_LIB=
 AUX_LIB=$(LIB)
@@ -48,7 +49,7 @@ AUX_LIB=$(LIB)
 TEST_SRC=talign.c
 TEST_OBJ=$(TEST_SRC:.c=.lo)
 
-PRIVATE_HDR=h5tools.h h5tools_str.h
+PRIVATE_HDR=h5tools.h h5tools_str.h h5diff.h h5trav.h
 
 ## Programs have to be built before they can be tested!
 ##
