--- a/trunk/src/H5config.h.in
+++ b/trunk/src/H5config.h.in
@@ -501,6 +501,10 @@
 /* Define to 1 if you have the ANSI C header files. */
 #undef STDC_HEADERS
 
+/* Define if your system can accurately convert unsigned long long values to
+   floating-point values. */
+#undef SW_ULONG_TO_FP_BOTTOM_BIT_WORKS
+
 /* Define if your system supports pthread_attr_setscope(&attribute,
    PTHREAD_SCOPE_SYSTEM) call. */
 #undef SYSTEM_SCOPE_THREADS
