Purpose:     Bug fix (sorta)
Description:
    Add hack to allow the MS Visual Studio 6 compiler to build the library.
It cannot cast unsigned long long values to float or double values.  So, add
another configuration macro to disable this conversion in the library.  Just
the "hardware" conversion is disabled, so the library will still correctly
convert unsigned long long to float and double values, it will just happen
more slowly with the "software" conversion routine.

Platforms tested:
    FreeBSD 4.9 (sleipnir) with "Windows" setting faked
    inappropriate for h5committest

--- a/configure.in
+++ b/configure.in
@@ -2398,6 +2398,24 @@ else
 fi
 
 dnl ----------------------------------------------------------------------
+dnl Set the flag to indicate that the machine can _compile_
+dnl 'unsigned long long' to 'float' and 'double' typecasts.
+dnl (This flag should be set for all machines, except for under Windows when
+dnl compiled with Visual Studio 6, where the macro value is set in the
+dnl src/H5pubconf.h file)
+dnl
+AC_MSG_CHECKING([if compiling unsigned long long to floating-point typecasts work])
+AC_CACHE_VAL([hdf5_cv_ullong_to_fp_cast_works], [hdf5_cv_ullong_to_fp_cast_works=yes])
+
+if test ${hdf5_cv_ullong_to_fp_cast_works} = "yes"; then
+  AC_DEFINE([ULLONG_TO_FP_CAST_WORKS], [1],
+            [Define if your system can compile unsigned long long to floating-point casts.])
+  AC_MSG_RESULT([yes])
+else
+  AC_MSG_RESULT([no])
+fi
+
+dnl ----------------------------------------------------------------------
 dnl Set some variables for general configuration information to be saved
 dnl and installed with the libraries.
 dnl
