--- a/trunk/config/conclude.in
+++ b/trunk/config/conclude.in
@@ -42,7 +42,7 @@ TAGS: $(LIB_SRC)
 ##
 tests: $(TEST_PROGS) $(TEST_PROGS_PARA) $(TEST_SCRIPTS) $(LIB)
 check test _test: tests
-	@echo "===Tests begin `date`==="
+	@echo "===Tests in `echo ${PWD} | sed -e s:.*/::` begin `date`==="
 	@for test in $(TEST_PROGS) dummy; do                                  \
 	   if test $$test != dummy; then				      \
 	      echo "============================";			      \
@@ -111,7 +111,7 @@ check test _test: tests
 	   fi;								      \
 	done;								      \
 	test $$test = dummy || false
-	@echo "===Tests ended `date`==="
+	@echo "===Tests in `echo ${PWD} | sed -e s:.*/::` ended `date`==="
 	@for d in X $(SUBDIRS); do                                      \
 	    if test $$d != X; then                                      \
 	        (set -x; cd $$d && $(MAKE) tests) || exit 1;            \
