--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -45,7 +45,7 @@ LIB_SRC=H5.c H5A.c H5AC.c H5B.c H5D.c H5Dio.c H5E.c H5F.c H5Fcontig.c         \
         H5Tconv.c H5Tcset.c H5Tenum.c H5Tfields.c H5Tfixed.c H5Tfloat.c       \
         H5Tinit.c H5Tnative.c H5Toffset.c H5Topaque.c H5Torder.c H5Tpad.c     \
         H5Tprecis.c H5Tstrpad.c H5Tvlen.c H5TB.c H5TS.c H5V.c H5Z.c           \
-        H5Zdeflate.c H5Zfletcher32.c H5Zshuffle.c H5Zszip.c
+        H5Zdeflate.c H5Zfletcher32.c H5Zshuffle.c H5Zszip.c H5Ztrans.c
 
 LIB_OBJ=$(LIB_SRC:.c=.lo)
 
