--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -31,7 +31,7 @@ TEST_PROGS=testhdf5 lheap ohdr stab gheap hyperslab istore bittests dtypes      
            dsets cmpd_dset extend external links unlink big mtime fillval mount \
            flush1 flush2 enum gass_write gass_read gass_append set_extent       \
            srb_write srb_append srb_read ttsafe stream_test getname file_handle \
-           ntypes dangle
+           ntypes dangle dtransform
 
 ## Test programs for Error API
 ERR_PROGS=error_test err_compat
@@ -83,7 +83,7 @@ TEST_SRC=big.c bittests.c cmpd_dset.c dsets.c dtypes.c extend.c              \
          ttsafe_cancel.c ttsafe_acreate.c gass_write.c gass_read.c           \
          gass_append.c srb_read.c srb_write.c srb_append.c stream_test.c     \
          set_extent.c getname.c file_handle.c ntypes.c dangle.c error_test.c \
-         err_compat.c
+         err_compat.c dtransform.c
 
 TEST_OBJ=$(TEST_SRC:.c=.lo)
 
@@ -230,4 +230,7 @@ error_test: error_test.lo
 err_compat: err_compat.lo
 	@$(LT_LINK_EXE) $(CFLAGS) -o $@ err_compat.lo $(LIB) $(LIBHDF5) $(LDFLAGS) $(LIBS)
         
+dtransform: dtransform.lo
+	@$(LT_LINK_EXE) $(CFLAGS) -o $@ dtransform.lo $(LIB) $(LIBHDF5) $(LDFLAGS) $(LIBS)
+
 @CONCLUDE@
