--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -30,8 +30,8 @@ LIB=libhdf5.la
 DISTCLEAN=libhdf5.settings
 
 ## Source and object files for the library (lexicographically)...
-LIB_SRC=H5.c H5A.c H5AC.c H5B.c H5D.c H5Dio.c H5E.c H5F.c H5Fcontig.c         \
-        H5Fcompact.c H5Fistore.c H5Fseq.c H5FD.c H5FDcore.c                   \
+LIB_SRC=H5.c H5A.c H5AC.c H5B.c H5D.c H5Dio.c H5Dtest.c H5E.c H5F.c           \
+        H5Fcontig.c H5Fcompact.c H5Fistore.c H5Fseq.c H5FD.c H5FDcore.c       \
         H5FDfamily.c H5FDfphdf5.c H5FDgass.c H5FDlog.c H5FDmpio.c             \
         H5FDmpiposix.c H5FDmulti.c H5FDsec2.c H5FDsrb.c H5FDstdio.c           \
         H5FDstream.c H5FL.c H5FO.c H5FP.c H5FPclient.c H5FPserver.c H5FS.c    \
