--- a/trunk/c++/src/Makefile.in
+++ b/trunk/c++/src/Makefile.in
@@ -32,7 +32,7 @@ CPPFLAGS=-I. -I$(hdf5_builddir) -I$(hdf5_srcdir) @CPPFLAGS@
 LIB=libhdf5_cpp.la
 
 ## Source and object files for the library
-LIB_SRC=H5Exception.cpp H5RefCounter.cpp H5IdComponent.cpp H5Library.cpp        \
+LIB_SRC=H5Exception.cpp H5IdComponent.cpp H5Library.cpp        \
         H5Attribute.cpp H5Object.cpp H5PropList.cpp H5FaccProp.cpp	        \
         H5FcreatProp.cpp H5DcreatProp.cpp H5DxferProp.cpp H5DataType.cpp        \
         H5DataSpace.cpp H5AbstractDs.cpp H5AtomType.cpp H5PredType.cpp	        \
@@ -45,7 +45,7 @@ PUB_HDR=H5Cpp.h H5AbstractDs.h H5AtomType.h H5Attribute.h H5Classes.h           
         H5DcreatProp.h H5DxferProp.h H5EnumType.h H5Exception.h H5FaccProp.h    \
         H5FcreatProp.h H5File.h H5FloatType.h H5Group.h H5IdComponent.h         \
         H5Include.h H5IntType.h H5Library.h H5Object.h H5PredType.h             \
-        H5PropList.h H5RefCounter.h H5StrType.h
+        H5PropList.h H5StrType.h
 PUB_PROGS=h5c++
 
 ARFLAGS=rs
