Purpose:     Update shell scripts
Description:
    Switch to generating the testh5dump.sh script at configure time, so we can
determine which filters are available to test.

Platforms tested:
    FreeBSD 4.9 (sleipnir)
    too small to require h5committest

--- a/tools/h5dump/testh5dump.sh.in
+++ b/tools/h5dump/testh5dump.sh.in
@@ -14,6 +14,12 @@
 #
 # Tests for the h5dump tool
 
+# Determine which filters are available
+USE_FILTER_SZIP="@USE_FILTER_SZIP@"
+USE_FILTER_DEFLATE="@USE_FILTER_DEFLATE@"
+USE_FILTER_SHUFFLE="@USE_FILTER_SHUFFLE@"
+USE_FILTER_FLETCHER32="@USE_FILTER_FLETCHER32@"
+
 DUMPER=h5dump               # The tool name
 DUMPER_BIN=`pwd`/$DUMPER    # The path of the tool binary
 
@@ -208,3 +214,6 @@ if test $nerrors -eq 0 ; then
 fi
 
 exit $nerrors
+
+
+
