Purpose:     Bug fix
Description:
    Correct path to new testh5dump.sh, now that it's generated.

Platforms tested:
    FreeBSD 4.10 (sleipnir) w & w/o srcdir
    Too minor to require h5committest

--- a/tools/h5dump/Makefile.in
+++ b/tools/h5dump/Makefile.in
@@ -27,7 +27,7 @@ CPPFLAGS=-I. -I$(srcdir) -I$(top_builddir)/src -I$(top_srcdir)/src  \
 ## Test programs and scripts.
 ##
 TEST_PROGS=h5dumpgentest
-TEST_SCRIPTS=$(srcdir)/testh5dump.sh $(srcdir)/testh5dumpxml.sh
+TEST_SCRIPTS=./testh5dump.sh $(srcdir)/testh5dumpxml.sh
 
 ## These are our main targets: library and tools.
 ##
