Purpose: Handled SZIP without the encoder present.
Description:
It is now an error for a user to try to create, extend, or write to a
dataset without the encoder present in their SZIP library.
Added H5Zget_filter_info to provide users with a way to query HDF5
about the presence (or lack thereof) of the SZIP encoder.

Platforms tested:
  Windows
  Verbena
  Arabica
  Copper

Misc. update:

--- a/branches/hdf5_1_6/src/H5config.h.in
+++ b/branches/hdf5_1_6/src/H5config.h.in
@@ -496,6 +496,9 @@
    PTHREAD_SCOPE_SYSTEM) call. */
 #undef SYSTEM_SCOPE_THREADS
 
+/* Define if szip encoder is present */
+#undef SZIP_CAN_ENCODE
+
 /* Define to 1 if you can safely include both <sys/time.h> and <time.h>. */
 #undef TIME_WITH_SYS_TIME
 
