Purpose: Update Makefile.in
Description:
    Removed macro H5_FILES from Makefile.in so that output files from the
    example programs will not be installed.

Platforms tested:
    FreeBSD 4.10 (sleipnir)
    I also tried to test on Linux 2.4 (eirene) but there was a failure
    in the C test.

--- a/branches/hdf5_1_6/c++/examples/Makefile.in
+++ b/branches/hdf5_1_6/c++/examples/Makefile.in
@@ -36,8 +36,7 @@ TEST_SRC=create.cpp readdata.cpp writedata.cpp compound.cpp extend_ds.cpp \
 	 chunks.cpp h5group.cpp
 TEST_OBJ=$(TEST_SRC:.cpp=.lo)
 
-H5_FILES=Attributes.h5 SDScompound.h5 Select.h5 SDSextendible.h5 Group.h5 SDS.h5
-EXAMPLE_PROGS=$(TEST_SRC) $(H5_FILES)
+EXAMPLE_PROGS=$(TEST_SRC)
 
 ## These are the programs that `make all' or `make tests' will build and which
 ## `make check' will run. List them in the order they should be run.
